# regex_intro

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
ae_core_template_python/: hello.py  settings.py
notebooks/: matching.ipynb  matching_solved.ipynb  replacing.ipynb  replacing_solved.ipynb  template.ipynb  usecases.ipynb
src/regex_intro/: __init__.py  helper.py
tests/: test_ae_core_template_python.py
